# ConjugateGradient

./: .gitignore  .gitmodules  CMakeLists.txt  flake.nix
src/: CG.hpp  LinearAlgebraTypes.hpp  Matrix.hpp  Tester.cpp  VectorOperations.hpp
test/: CMakeLists.txt  Tester.cpp  mm_reader.cpp  utils.hpp
